--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body onload="displayItems()">
     <div class="container">
-      <h1>To Do List<i class="fa fa-plus right"></i></h1>
+      <h1>To Do List</h1>
       <h1 id='owner'></h1>
       <input type="text" placeholder="type new item and press enter">
       <ul id="myText">
